More general tidying and updates to allow users to be added to groups

--- a/src/main/webapp/js/horizon3/css/StripedContent.css
+++ b/src/main/webapp/js/horizon3/css/StripedContent.css
@@ -4,7 +4,8 @@
    #TOP_HEADER {
       .alfresco-layout-LeftAndRight__right {
          .alfresco-buttons-AlfButton {
-            margin-top: 19px
+            margin-top: 19px;
+            margin-left: 15px;
          }
       }
    }
