--- a/src/main/webapp/js/horizon3/css/Title.css
+++ b/src/main/webapp/js/horizon3/css/Title.css
@@ -1,9 +1,9 @@
 .@{alfresco} {
    h1.alfresco-header-Title.horizon3-Title {
       .alfresco-header-Title__text {
-         color: #fff;
+         color: #fff !important;
          > a {
-            color: #fff;
+            color: #fff !important;
          }
       }
    }
